# captain-quirk

./: .coveragerc  README.md  pyproject.toml
.github/: linter.yml
captain_quirk/: _utils.py  qiskit.py
